--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
 <HTML>
 	<HEAD></HEAD>
-	<BODY><H1> TO THE MOON... </H1></BODY>
+	<BODY><H1> MOON, MARS AND BEYOND </H1></BODY>
 </HTML>
