added code for image and added image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
 	<HEAD></HEAD>
-	<BODY><H1> MOON, MARS AND BEYOND. </H1></BODY>
+	<BODY><H1> MOON, MARS AND BEYOND. </H1>
+	<IMG SRC="alpha_centauri.jpg" alt="" width="1200" height="800">
+	</BODY>
 </HTML>
