added relevant hyperlinks

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <HTML>
 	<HEAD></HEAD>
 	<BODY><H1> MOON, MARS AND BEYOND. </H1>
-	<IMG SRC="alpha_centauri.jpg" alt="" width="1200" height="800">
-	</BODY>
+	<IMG SRC="alpha_centauri.jpg" alt="" width="720" height="480">
+	<BR>
+	<BR>
+	<A HREF="https://www.spacex.com/">>>> SPACEX</A>
+	<BR>
+	<A HREF="https://en.wikipedia.org/wiki/China_Aerospace_Science_and_Technology_Corporation">>>> CASC</A>
+	<BR>
+	<A HREF="https://www.nasa.gov/">>>> NASA</A>
+	<BR>
+	<A HREF="https://www.blueorigin.com/">>>> BLUE ORIGIN</A>
+	<BODY>
 </HTML>
