--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 	<A HREF="https://www.nasa.gov/">>>> NASA</A>
 	<BR>
 	<A HREF="https://www.blueorigin.com/">>>> BLUE ORIGIN</A>
-<A HREF="aiagents.html" For AI AGENTS/>
+<A HREF="aiagents.html"> For AI AGENTS</A>
 	<BODY>
 </HTML>
