--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<BR>
 	<A HREF="https://www.nasa.gov/">>>> NASA</A>
 	<BR>
-	<A HREF="https://www.blueorigin.com/">>>> BLUE ORIGIN</A>
+	<A HREF="https://www.blueorigin.com/">>>> BLUE ORIGIN</A><BR>
 <A HREF="aiagents.html"> For AI AGENTS</A>
 	<BODY>
 </HTML>
