--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <HTML>
 	<HEAD></HEAD>
 	<BODY><H1> MOON, MARS AND BEYOND. </H1>
-	<IMG SRC="alpha_centauri.jpg" alt="" width="720" height="480">
-	<BR>
-	<BR>
-	<A HREF="https://www.spacex.com/">>>> SPACEX</A>
-	<BR>
-	<A HREF="https://en.wikipedia.org/wiki/China_Aerospace_Science_and_Technology_Corporation">>>> CASC</A>
-	<BR>
-	<A HREF="https://www.nasa.gov/">>>> NASA</A>
-	<BR>
-	<A HREF="https://www.blueorigin.com/">>>> BLUE ORIGIN</A><BR>
+<BR>
+	<A HREF="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Resources to develop learn linux Kernal Development </A>
+		<a href=https://4chanarchives.com/board/biz/thread/1231113"> Resources to learn stock trading </a>
 <A HREF="aiagents.html"> For AI AGENTS</A>
 	<BODY>
 </HTML>
