--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<HEAD></HEAD>
 	<BODY><H1> MOON, MARS AND BEYOND. </H1>
 <BR>
-	<A HREF="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Resources to develop learn linux Kernal Development </A>
-		<a href="https://4chanarchives.com/board/biz/thread/1231113"> Resources to learn stock trading </a>
-		<a href="alpha_centauri.jpg"> Picture of our nearest star system Alpha Centauri</a>
+	<A HREF="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Resources to develop learn linux Kernal Development </A> <br>
+		<a href="https://4chanarchives.com/board/biz/thread/1231113"> Resources to learn stock trading </a>  <br>
+		<a href="alpha_centauri.jpg"> Picture of our nearest star system Alpha Centauri</a> <br>
 <A HREF="aiagents.html"> For AI AGENTS</A>
 	<BODY>
 </HTML>
