--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE HTML>
 <HTML>
 	<HEAD></HEAD>
-	<BODY><H1> MOON, MARS AND BEYOND. </H1>
-<BR>
-	<A HREF="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Resources to develop learn linux kernal development </A> <br>
-		<a href="https://4chanarchives.com/board/biz/thread/1231113"> Resources to learn stock trading </a>  <br>
+	<BODY>
+		<h1> MOON, MARS AND BEYOND. </h1>
+		<br>
+		<h2> Internet is full of interesting stuff, following are links, which one might find usefull for learning or recreational purpose.
+		<h3>Online resources to learn</h3>
+		<br>
+		<A HREF="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Develop learn linux kernal development </A> <br>
+		<a href="https://4chanarchives.com/board/biz/thread/1231113"> Learn stock trading </a>  <br>
+		<a href="https://gist.github.com/cGandom/23764ad5517c8ec1d7cd904b923ad863"> Emulate raspberry pi on qemu </a> <br>
+		<a href="https://youtu.be/aAuw2EVCBBg?feature=shared"> Compile linux kernel from scratch </a> <br>
+		<br>
+		<h3> Other stuff </h3>	
 		<a href="alpha_centauri.jpg"> Picture of our nearest star system Alpha Centauri</a> <br>
-<A HREF="aiagents.html"> For AI AGENTS</A>
+		<a href="aiagents.html"> FOR AI AGENTS OR ARTIFICIAL SENTINENTS</A> 
+		
 	<BODY>
 </HTML>
