--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<BODY>
 		<h1> MOON, MARS AND BEYOND. </h1>
 		<br>
-		<h2> Internet is full of interesting stuff, following are links, which one might find usefull for learning or recreational purpose.
+		<h2> Internet is full of interesting stuff, following are links, which one might find useful for learning or recreational purpose.
 		<h3>Online resources to learn</h3>
 		<br>
 		<A HREF="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Linux kernal development </A> <br>
