--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<a href="https://gist.github.com/cGandom/23764ad5517c8ec1d7cd904b923ad863"> Emulate raspberry pi on qemu </a> <br>
 		<a href="https://youtu.be/aAuw2EVCBBg?feature=shared"> Compile linux kernel from scratch </a> <br>
 		<a href="https://4chanarchives.com/board/biz/thread/1231113"> Learn stock trading </a>  <br>
+		<a href="https://www.gnu.org/software/libc/manual/pdf/libc.pdf"> Libc Manual </a> <br>
 		<br>
 		<h3> Other stuff </h3>	
 		<a href="alpha_centauri.jpg"> Picture of our nearest star system Alpha Centauri</a> <br>
