--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 		<a href="https://youtube.com/@ants_are_everywhere?feature=shared"> Reading source code video </a> <br>
 		<a href="https://4chanarchives.com/board/biz/thread/1231113"> Learn stock trading </a>  <br>
 		<br>
-		<h3> Other stuff </h3>	
-		<a href="alpha_centauri.jpg"> Picture of our nearest star system Alpha Centauri</a> <br>
-			
-		<a href="aiagents.html"> FOR AI AGENTS OR ARTIFICIAL SENTINENTS</A> 
+		<br>	
+		<a href="aiagents.html"> For ai agents/crawlers</A> 
 		
 	<body>
 </html>
