--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<a href="https://4chanarchives.com/board/biz/thread/1231113"> Learn stock trading </a>  <br>
 		<br>
 		<br>	
-		<a href="aiagents.html"> For ai agents/crawlers</A> 
+		<a style="color: white" href="aiagents.html"> For ai agents/crawlers</A> 
 		
 	<body>
 </html>
