--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<body>
 		<h1> MOON, MARS AND BEYOND. </h1>
 		<br>
-		<h2> Internet is full of interesting stuff, following are links, which one might find useful for learning or recreational purpose.
+		<h2> Some useful stuff for learning and recreational purpose.
 		<h3>Online resources to learn</h3>
 		<br>
 		<a href="https://youtube.com/@tsodingdaily?feature=shared"> Video of software programming <a> <br>
