--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head></head>
 	<body>
 		<h1> MOON, MARS AND BEYOND. </h1>
+		<a hre="https://x.com/elonmusk/status/1832550322293837833"> Mars Update </a><br>
 		<br>
 		<h2> Some useful stuff for learning and recreational purpose.
 		<h3>Online resources to learn</h3>
