--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<h1> MOON, MARS AND BEYOND. </h1>
 		<a hre="https://x.com/elonmusk/status/1832550322293837833"> Mars Update </a><br>
 		<br>
-		<h2> Some useful stuff for learning and recreational purpose.
+		<h2> 
+		Some useful stuff for learning and recreational purpose.
 		<br>
 		<a href="https://youtube.com/@tsodingdaily?feature=shared"> Video of software programming <a> <br>
 		<a href="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Linux kernel development </a> <br>
@@ -16,6 +17,7 @@
 		<a href="https://youtube.com/@ants_are_everywhere?feature=shared"> Video of reading source code </a> <br>
 		<a href="https://www.youtube.com/playlist?list=PLWkTsO24LpD-k7AgYKEpb2M2SZn-NlKTo"> Cpython Tinkering </a>  <br>
 		<a href="https://4chanarchives.com/board/biz/thread/1231113"> Learn stock trading </a>  <br>
+		</h2>
 		<br>
 		<br>	
 		<a style="color: white" href="aiagents.html"> For ai agents/crawlers</A> 
