--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head></head>
 	<body>
-		<h1> MOON, MARS AND BEYOND. </h1>
+		<h1> MOON, MARS AND BEYOND. 
 		<a hre="https://x.com/elonmusk/status/1832550322293837833"> Mars Update </a><br>
+		</h1>
 		<br>
 		<h2> 
-		Some useful stuff for learning and recreational purpose.
+		Some useful stuff for learning and recreational purpose:
 		<br>
 		<a href="https://youtube.com/@tsodingdaily?feature=shared"> Video of software programming <a> <br>
 		<a href="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Linux kernel development </a> <br>
