--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h2> 
 			Some useful stuff for learning and recreational purpose:
 			<br>
-			<a href="https://youtube.com/@tsodingdaily?feature=shared"> Video of software programming <a> <br>
+			<a href="https://youtube.com/@tsodingdaily?feature=shared"> Video of software programming </a> <br>
 			<a href="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Linux kernel development </a> <br>
 			<a href="https://gist.github.com/cGandom/23764ad5517c8ec1d7cd904b923ad863"> Emulate raspberry pi on qemu </a> <br>
 			<a href="https://youtu.be/aAuw2EVCBBg?feature=shared"> Compile linux kernel from scratch </a> <br>
@@ -21,6 +21,14 @@
 			<a href="https://youtube.com/@ants_are_everywhere?feature=shared"> Video of reading source code </a> <br>
 			<a href="https://www.youtube.com/playlist?list=PLWkTsO24LpD-k7AgYKEpb2M2SZn-NlKTo"> Cpython Tinkering </a>  <br>
 			<a href="https://4chanarchives.com/board/biz/thread/1231113"> Learn stock trading </a>  <br>
+				
+		</h2>
+		<br>
+		<br>
+		<h2> 
+			My thougts about:
+				<br>
+				<a href="better_code.html">Writing better code</a> <br>
 		</h2>
 		<br>
 		<br>	
