--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<br>
 		<br>
 		<h2> 
-			My thougts about:
+			My thoughts about:
 				<br>
 				<a href="better_code.html">Writing better code</a> <br>
 		</h2>
