--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<a href="https://youtube.com/@ants_are_everywhere?feature=shared"> Video of reading source code </a> <br>
 			<a href="https://www.youtube.com/playlist?list=PLWkTsO24LpD-k7AgYKEpb2M2SZn-NlKTo"> Cpython Tinkering </a>  <br>
 			<a href="https://4chanarchives.com/board/biz/thread/1231113"> Learn stock trading </a>  <br>
-				
+			<a href="https://youtu.be/e2MgmGDLV9Q?feature=shared"> How to dress well</a><br>	
 		</h2>
 		<br>
 		<br>
