--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			My thoughts about:
 				<br>
 				<a href="better_code.html">Writing better code</a> <br>
+				<a href="problems_reason.html">Why problems persist </a>
 		</h2>
 		<br>
 		<br>	
