--- a/better_code.html
+++ b/better_code.html
@@ -19,7 +19,7 @@
        While debugging, go through logs, observe the gaps and try to identify where things went wrong. <br>
        Write extensive test cases. It doesn't matter if test cases grow larger than original code. Keep running test cases even after small changes. <br>
        Always write code keeping in mind that someone else has to read and work on your code in future. <br>
-       Every now and then read code of open source projects to newer ideas. <br>
+       Every now and then read code of open source projects in order to get newer ideas. <br>
        Try to read code written in different languages, because different languages force to think differently. <br>
        Always work on side projects. <br>
        Doing all of above mentioned things is mentally energy consuming, also you might have to work little bit longer, but it is worth the pain.<br>
