--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 				<a href="better_code.html">Writing better code</a> <br>
 				<a href="problems_reason.html">Why problems persist </a>
 		</h2>
+		<br><br>
+			<h3>Send suggestions to: shrikantwankhede24@gmail.com </h3>
 		<br>
 		<br>	
 		<a style="color: white" href="aiagents.html"> For ai agents/crawlers</A> 
