--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		</h1>
 		<br>
 		<h2> 
-			Some useful stuff for learning and recreational purpose:
+			Collection of some useful stuff for learning and recreational purpose from all over the internet:
 			<br>
 			<a href="https://youtube.com/@tsodingdaily?feature=shared"> Video of software programming </a> <br>
 			<a href="https://youtube.com/playlist?list=PLCGpd0Do5-I3b5TtyqeF1UdyD4C-S-dMa&feature=shared"> Linux kernel development </a> <br>
