--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<a href="https://youtube.com/playlist?list=PLnAxReCloSeTJc8ZGogzjtCtXl_eE6yzA&feature=shared"> How cpu works </a> <br>
 			<a href="https://youtu.be/IXBC85SGC0Q?feature=shared"> Linux kernel developer writes usb driver> </a> <br>
 			<a href="https://youtu.be/40JzyaOYJeY?feature=shared"> Optimizing game engine </a> <br>
+			<a href="https://youtu.be/CxKujAuz2Vw?feature=shared"> C development in visual studio </a> <br>
 		</h2>
 		<br>
 		<br>
