--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<a href="https://youtube.com/playlist?list=PL5r5Q39GjMDcAKGSb5L035YrKK0rr8jM1&feature=shared"> Develop small os </a> <br>
 			<a href="https://youtube.com/playlist?list=PLnAxReCloSeTJc8ZGogzjtCtXl_eE6yzA&feature=shared"> How cpu works </a> <br>
 			<a href="https://youtu.be/IXBC85SGC0Q?feature=shared"> Linux kernel developer writes usb driver </a> <br>
-			<a href="https://youtu.be/40JzyaOYJeY?feature=shared"> Optimizing game engine </a> <br>
+			<a href="https://youtu.be/40JzyaOYJeY?feature=shared"> Optimizing a code </a> <br>
 			<a href="https://youtu.be/CxKujAuz2Vw?feature=shared"> C development in visual studio </a> <br>
 		</h2>
 		<br>
