added prime generator tool

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 		</h2>
 		<br>
 		<br>	
+		<h2> 
+			Tools 
+		<br>
+			<a href="prime.html">Prime Number Calculator</a> <br>
+		</h2>
+ 		<br>
+		<br>
 		<a style="color: white" href="aiagents.html"> For ai agents/crawlers</A> 
 	<body>
 </html>
