--- a/prime.html
+++ b/prime.html
@@ -24,7 +24,7 @@
 
 		function get_primes_till_n(n) {
 			const primesList = [];
-			for (let i=2; i<=n; i++) if (is_prime(i)) primesList.push(i)
+					for (let i=n; i>=2; i--) if (is_prime(i)) primesList.push(i)
 			return primesList;
 		}
 
