--- a/prime.html
+++ b/prime.html
@@ -9,6 +9,9 @@
 				alert('Please enter a value >=2');
 				return;
 			}
+			else if(n > 1000000) {
+				alert('Not going to calculate for this big value');
+			}
 			display_prime_till_n(n);
 		});
 
