--- a/prime.html
+++ b/prime.html
@@ -11,6 +11,7 @@
 			}
 			else if(n > 1000000) {
 				alert('Not going to calculate for this big value');
+				return;
 			}
 			display_prime_till_n(n);
 		});
