--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<a href="https://youtu.be/IXBC85SGC0Q?feature=shared"> Linux kernel developer writes usb driver </a> <br>
 			<a href="https://youtu.be/40JzyaOYJeY?feature=shared"> Game engine optimization </a> <br>
 			<a href="https://youtu.be/CxKujAuz2Vw?feature=shared"> C development in visual studio </a> <br>
-			<a href="json_prettifier.html"> JSON preetifier </a> <br>
+			<a href="jsonpretty.html"> JSON preetifier </a> <br>
 		</h2>
 		<br>
 		<br>
