--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<a href="https://youtu.be/IXBC85SGC0Q?feature=shared"> Linux kernel developer writes usb driver </a> <br>
 			<a href="https://youtu.be/40JzyaOYJeY?feature=shared"> Game engine optimization </a> <br>
 			<a href="https://youtu.be/CxKujAuz2Vw?feature=shared"> C development in visual studio </a> <br>
-			<a href="jsonpretty.html"> JSON preetifier </a> <br>
+			
 		</h2>
 		<br>
 		<br>
@@ -38,13 +38,14 @@
 		</h2>
 		<br>
 		<br>	
-<!-- 		<h2> 
-			Tools 
+		<h2> 
+			Tools (Made with help of llm for personal use)
 		<br>
 			<a href="prime.html">Prime Number Calculator</a> <br>
+			<a href="jsonpretty.html"> JSON preetifier </a> <br>
 		</h2>
  		<br>
-		<br> -->
+		<br>
 		<a style="color: white" href="aiagents.html"> For ai agents/crawlers</A> 
 	<body>
 </html>
